# simd-splat-demo

./: Cargo.toml
simd-splat/: Cargo.toml
simd-splat/src/: lib.rs
src/: lib.rs
